crates/cli/tests/snapshots/scenario_transcripts@probation.snap
---
source: crates/cli/tests/scenarios.rs
expression: transcript
input_file: scenarios/probation.scenario
---
> load content/sample
loaded 6 characters from content/sample
> faction-shift city_watch --law -30
#1 at tick 0: city_watch's alignment moved from law 70.00, good 20.00 to law 40.00, good 20.00
#2 at tick 0: captain_hale is on probation with city_watch until tick 100
> faction-shift city_watch --law 20
#3 at tick 0: city_watch's alignment moved from law 40.00, good 20.00 to law 60.00, good 20.00
#4 at tick 0: captain_hale's probation with city_watch is cleared
> advance 200
#5 at tick 0: time advanced from 0 to 200
> assert show character captain_hale == captain_hale — Captain Hale — law 75.00, good 30.00 — Lawful Neutral — member of city_watch (captain) since tick 0
> load content/sample
loaded 6 characters from content/sample
> faction-shift city_watch --law -30
#1 at tick 0: city_watch's alignment moved from law 70.00, good 20.00 to law 40.00, good 20.00
#2 at tick 0: captain_hale is on probation with city_watch until tick 100
> advance 99
#3 at tick 0: time advanced from 0 to 99
> advance 1
#4 at tick 99: time advanced from 99 to 100
#5 at tick 100: captain_hale's probation with city_watch ran out
#6 at tick 100: captain_hale left city_watch (expelled)
#7 at tick 100: captain_hale's standing with city_watch moved from 75.00 to 55.00
#8 at tick 100: captain_hale's standing with lantern_guild moved from 0.00 to 3.60, with 3.60 spilled from city_watch (-20.00 × -0.18; lantern_guild regards it at -80.00)
#9 at tick 100: captain_hale's standing with temple moved from 0.00 to -2.00, with -2.00 spilled from city_watch (-20.00 × 0.10; temple regards it at 60.00)
> assert standing captain_hale city_watch == 55.00
> load content/sample
loaded 6 characters from content/sample
> faction-shift lantern_guild --law 70
#1 at tick 0: lantern_guild's alignment moved from law -60.00, good -10.00 to law 10.00, good -10.00
#2 at tick 0: vex has drifted out of lantern_guild's tolerance: 65.19 from it, tolerance 60.00
> assert faction-align lantern_guild 120 0 == error: law: 120.00 is outside -100.00..100.00
