crates/cli/tests/snapshots/scenario_transcripts@ranks.snap
---
source: crates/cli/tests/scenarios.rs
expression: transcript
input_file: scenarios/ranks.scenario
---
> load content/sample
loaded 6 characters from content/sample
> ranks lantern_guild
1. cutpurse
2. fence — needs standing 25.00
3. shadow — needs standing 60.00
> assert promote vex lantern_guild == error: vex can't be promoted in lantern_guild: shadow needs standing 60.00, vex has 30.00
> outcome fenced_the_crown_jewels vex
#1 at tick 0: outcome fenced_the_crown_jewels applied to vex
#2 at tick 0: vex's standing with lantern_guild moved from 30.00 to 60.00
> assert show character vex == vex — Vex — law -55.00, good -20.00 — Chaotic Neutral — member of lantern_guild (fence) since tick 0
> promote vex lantern_guild
#3 at tick 0: vex's rank in lantern_guild changed from fence to shadow
> assert promote captain_hale city_watch == error: captain_hale is already a captain, the highest rank of city_watch
> promote sister_mira temple --explain
sister_mira: ordained → high_priest in temple: no
standing: needs 80.00, has 40.00 — not met
tolerance: within 20.00, is 5.59 — met
> act player steal --scale 4
#4 at tick 0: player did steal, at scale 4.00
#5 at tick 0: player's alignment moved from law 0.00, good 0.00 to law -20.00, good -12.00
> join player lantern_guild
#6 at tick 0: player joined lantern_guild as a cutpurse
> assert demote player lantern_guild == error: player is already a cutpurse, the lowest rank of lantern_guild
> demote vex lantern_guild
#7 at tick 0: vex's rank in lantern_guild changed from shadow to fence
> show faction lantern_guild
lantern_guild — The Lantern Guild — law -60.00, good -10.00 — Chaotic Neutral — tolerance 45.00, member tolerance 60.00 — members: player (cutpurse), vex (fence)
